= Changelog

== next mini

* CHANGED: DomainName#domain and DomainName#subdomain are no longer alias of Domain#sld and Domain#tld.

* CHANGED: Removed DomainName#labels and decoupled Rule from DomainName.

* CHANGED: DomainName#valid? no longer instantiates new DomainName objects. This means less overhead.


== Release 0.2.0

* ADDED: DomainName#valid?

* ADDED: DomainName#parse and DomainName#parse!

* ADDED: DomainName#valid_domain? and DomainName#valid_subdomain?

* CHANGED: Make sure RuleList lookup is only performed once.


== Release 0.1.0

* Initial version