@@ -2,103 +2,184 @@ require 'test_helper'
 
 class DomainNameTest < Test::Unit::TestCase
 
+  def test_initialize_with_tld
+    domain = DomainName.new("com")
+    assert_equal "com",     domain.tld
+    assert_equal nil,       domain.sld
+    assert_equal nil,       domain.trd
+  end
+
+  def test_initialize_with_tld_and_sld
+    domain = DomainName.new("com", "google")
+    assert_equal "com",     domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal nil,       domain.trd
+  end
+
+  def test_initialize_with_tld_and_sld_and_trd
+    domain = DomainName.new("com", "google", "www")
+    assert_equal "com",     domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal "www",     domain.trd
+  end
+
+
   def test_to_s
-    assert_equal "google.uk", domain_name("google.uk").to_s
-    assert_equal "google.co.uk", domain_name("google.co.uk").to_s
+    assert_equal "com",             DomainName.new("com").to_s
+    assert_equal "google.com",      DomainName.new("com", "google").to_s
+    assert_equal "www.google.com",  DomainName.new("com", "google", "www").to_s
   end
 
-
-  def test_rule
-    assert_kind_of DomainName::Rule::Base, domain_name("google.com").rule
-  end
-
-  def test_rule_missing
-    assert_equal nil, domain_name("google.zip").rule
-  end
-
-  def test_rule_bang
-    assert_kind_of DomainName::Rule::Base, domain_name("google.com").rule!
-  end
-
-  def test_rule_bang_missing
-    assert_raise(DomainName::Error) { domain_name("google.zip").rule! } 
-  end
-
-
-  def test_valid_question
-    assert  domain_name("google.com").valid?
-    assert  domain_name("www.google.com").valid?
-    assert !domain_name("google.zip").valid?
-    assert !domain_name("www.google.zip").valid?
-  end
-
-  def test_valid_domain_question
-    assert  domain_name("google.com").valid_domain?
-    assert  domain_name("www.google.com").valid_domain?
-    assert !domain_name("google.zip").valid_domain?
-    assert !domain_name("www.google.zip").valid_domain?
-  end
-
-  def test_valid_subdomain_question
-    assert !domain_name("google.com").valid_subdomain?
-    assert  domain_name("www.google.com").valid_subdomain?
-    assert !domain_name("google.zip").valid_subdomain?
-    assert !domain_name("www.google.zip").valid_subdomain?
-  end
-
-
-  def test_domain
-    assert_equal "google.com", domain_name("google.com").domain
-    assert_equal "google.com", domain_name("www.google.com").domain
-
-    assert_equal nil, domain_name("google.zip").domain
-    assert_equal nil, domain_name("www.google.zip").domain
-  end
-
-  def test_subdomain
-    assert_equal nil, domain_name("google.com").subdomain
-    assert_equal "www.google.com", domain_name("www.google.com").subdomain
-
-    assert_equal nil, domain_name("google.zip").subdomain
-    assert_equal nil, domain_name("www.google.zip").subdomain
+  def test_to_a
+    assert_equal [nil, nil, "com"],         DomainName.new("com").to_a
+    assert_equal [nil, "google", "com"],    DomainName.new("com", "google").to_a
+    assert_equal ["www", "google", "com"],  DomainName.new("com", "google", "www").to_a
   end
 
 
   def test_tld
-    assert_raise(DomainName::InvalidDomain) { domain_name("google.zip").tld }
-    assert_equal "com", domain_name("google.com").tld
+    assert_equal "com", DomainName.new("com", "google", "www").tld
   end
 
   def test_sld
-    assert_raise(DomainName::InvalidDomain) { domain_name("google.zip").sld }
-    assert_equal "google", domain_name("google.com").sld
+    assert_equal "google", DomainName.new("com", "google", "www").sld
   end
 
   def test_tld
-    assert_raise(DomainName::InvalidDomain) { domain_name("google.zip").trd }
-    assert_equal nil, domain_name("google.com").trd
-    assert_equal "www", domain_name("www.google.com").trd
+    assert_equal "www", DomainName.new("com", "google", "www").trd
   end
 
 
-  def test_parse
-    domain = domain_name("google.zip")
-    assert_equal domain, domain.parse
-    assert_equal nil, domain.rule
-
-    domain = domain_name("google.com")
-    assert_equal domain, domain.parse
-    assert_not_equal nil, domain.rule
+  def test_name
+    assert_equal "com",             DomainName.new("com").name
+    assert_equal "google.com",      DomainName.new("com", "google").name
+    assert_equal "www.google.com",  DomainName.new("com", "google", "www").name
   end
 
-  def test_parse_bang
-    domain = domain_name("google.zip")
-    assert_raise(DomainName::InvalidDomain) { domain.parse! }
-    assert_equal nil, domain.rule
+  def test_domain
+    assert_equal nil, DomainName.new("com").domain
+    assert_equal nil, DomainName.new("zip").domain
+    assert_equal "google.com", DomainName.new("com", "google").domain
+    assert_equal "google.zip", DomainName.new("zip", "google").domain
+    assert_equal "google.com", DomainName.new("com", "google", "www").domain
+    assert_equal "google.zip", DomainName.new("zip", "google", "www").domain
+  end
 
-    domain = domain_name("google.com")
-    assert_equal domain, domain.parse
-    assert_not_equal nil, domain.rule
+  def test_subdomain
+    assert_equal nil, DomainName.new("com").subdomain
+    assert_equal nil, DomainName.new("zip").subdomain
+    assert_equal nil, DomainName.new("com", "google").subdomain
+    assert_equal nil, DomainName.new("zip", "google").subdomain
+    assert_equal "www.google.com", DomainName.new("com", "google", "www").subdomain
+    assert_equal "www.google.zip", DomainName.new("zip", "google", "www").subdomain
+  end
+
+  def test_rule
+    assert_equal nil,                             DomainName.new("zip").rule
+    assert_equal DomainName::Rule.factory("com"), DomainName.new("com").rule
+    assert_equal DomainName::Rule.factory("com"), DomainName.new("com", "google").rule
+    assert_equal DomainName::Rule.factory("com"), DomainName.new("com", "google", "www").rule
+  end
+
+
+  def test_domain_question
+    assert  DomainName.new("com", "google").domain?
+    assert  DomainName.new("zip", "google").domain?
+    assert  DomainName.new("com", "google", "www").domain?
+    assert !DomainName.new("com").domain?
+  end
+
+  def test_subdomain_question
+    assert  DomainName.new("com", "google", "www").subdomain?
+    assert  DomainName.new("zip", "google", "www").subdomain?
+    assert !DomainName.new("com").subdomain?
+    assert !DomainName.new("com", "google").subdomain?
+  end
+
+  def test_is_a_domain_question
+    assert  DomainName.new("com", "google").is_a_domain?
+    assert  DomainName.new("zip", "google").is_a_domain?
+    assert !DomainName.new("com", "google", "www").is_a_domain?
+    assert !DomainName.new("com").is_a_domain?
+  end
+
+  def test_is_a_subdomain_question
+    assert  DomainName.new("com", "google", "www").is_a_subdomain?
+    assert  DomainName.new("zip", "google", "www").is_a_subdomain?
+    assert !DomainName.new("com").is_a_subdomain?
+    assert !DomainName.new("com", "google").is_a_subdomain?
+  end
+
+  def test_valid_question
+    assert  DomainName.new("com").valid?
+    assert  DomainName.new("com", "google").valid?
+    assert  DomainName.new("com", "google", "www").valid?
+    assert !DomainName.new("zip").valid?
+    assert !DomainName.new("zip", "google").valid?
+    assert !DomainName.new("zip", "google", "www").valid?
+  end
+
+  def test_valid_domain_question
+    assert  DomainName.new("com", "google").valid_domain?
+    assert !DomainName.new("zip", "google").valid_domain?
+    assert  DomainName.new("com", "google", "www").valid_domain?
+    assert !DomainName.new("com").valid_domain?
+  end
+
+  def test_valid_subdomain_question
+    assert  DomainName.new("com", "google", "www").valid_subdomain?
+    assert !DomainName.new("zip", "google", "www").valid_subdomain?
+    assert !DomainName.new("com").valid_subdomain?
+    assert !DomainName.new("com", "google").valid_subdomain?
+  end
+
+
+
+  def test_self_parse_a_domain_with_tld_and_sld
+    domain = DomainName.parse("google.com")
+    assert_instance_of DomainName, domain
+    assert_equal "com",     domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal nil,       domain.trd
+
+    domain = DomainName.parse("google.co.uk")
+    assert_instance_of DomainName, domain
+    assert_equal "co.uk",   domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal nil,       domain.trd
+  end
+
+  def test_self_parse_a_domain_with_tld_and_sld_and_trd
+    domain = DomainName.parse("alpha.google.com")
+    assert_instance_of DomainName, domain
+    assert_equal "com",     domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal "alpha",   domain.trd
+
+    domain = DomainName.parse("alpha.google.co.uk")
+    assert_instance_of DomainName, domain
+    assert_equal "co.uk",   domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal "alpha",   domain.trd
+  end
+
+  def test_self_parse_a_domain_with_tld_and_sld_and_4rd
+    domain = DomainName.parse("one.two.google.com")
+    assert_instance_of DomainName, domain
+    assert_equal "com",     domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal "one.two", domain.trd
+
+    domain = DomainName.parse("one.two.google.co.uk")
+    assert_instance_of DomainName, domain
+    assert_equal "co.uk",   domain.tld
+    assert_equal "google",  domain.sld
+    assert_equal "one.two", domain.trd
+  end
+
+  def test_self_parse_should_raise_with_invalid_domain
+    error = assert_raise(DomainName::InvalidDomain) { DomainName.parse("google.zip") }
+    assert_match %r{google\.zip}, error.message
   end
 
 
